--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,23 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  /* colors */
+  --blue-000: #d5f4ff;
+  --blue-50: #c7e2ff;
+  --blue-100: #0443e1;
+  --blue-200: #1f274c;
+  --blue-300: #1a2247;
+  --blue-400: #21243a;
+  --blue-500: #000934;
+
+  /*primary */
+  --primary-100: #06cdb3;
+  --primary-200: #04a28e;
+  --primary-300: #046f61;
+
+  /* greys */
+  --grey-100: #e1e3e9;
+  --grey-200: #a1a5ae;
+}
