--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 :root {
@@ -22,4 +24,7 @@
   /* greys */
   --grey-100: #e1e3e9;
   --grey-200: #a1a5ae;
+
+  /* dimensions */
+  --nav-height: 60px;
 }
