--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
-/* FONTS */
+/* IMPORTS */
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap");
+@import "react-toastify/dist/ReactToastify.min.css";
 .orbitron-style {
   font-family: "Orbitron", sans-serif;
   font-optical-sizing: auto;
@@ -54,6 +55,9 @@
   --round-sm: 5px;
   --round-md: 10px;
   --round-lg: 25px;
+
+  --toastify-color-success: hsl(var(--primary-300));
+  --toastify-color-progress-bgo: hsl(var(--primary-300));
 }
 
 * {
@@ -63,6 +67,14 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+.Toastify__toast-body {
+  --toastify-color-progress-info: var(--toastify-color-success);
+  --toastify-color-progress-success: var(--toastify-color-success);
+  --toastify-color-progress-warning: var(--toastify-color-success);
+  --toastify-color-progress-error: var(--toastify-color-success);
+}
+
 .logo-container {
   display: flex;
   align-items: center;
