--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,6 +74,7 @@
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 .Toastify__toast-body {
