--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,6 +57,7 @@
   --grey-300: #63666c;
   --grey-400: #4c4f53;
   --grey-500: #323437;
+  --grey-900: #1c1c1c;
 
   /* reds & errors */
   --red-000: #ffe5e4;
